# nbody-sim

./: CMakeLists.txt  README.md  vecmath.c
include/: body.h
include/app/: app.h
include/config/: constants.h
include/core/: body.h  body_creator.h  constants.h  gravity.h  layout.h  renderer.h  simulation.h  vec2.h  widget.h
include/editor/: body_creator.h
include/math/: vec2.h
include/physics/: gravity.h  simulation.h
include/render/: renderer.h
include/simulator/: simulator.h  simulator_templates.h
include/ui/: widget.h
sandbox/: CMakeLists.txt  main.c
src/: CMakeLists.txt  main.c  out.txt  testing_space.py  update_body.c  update_body.h  vecmath.c  vecmath.h
src/app/: app.c
src/core/: body_creator.c  gravity.c  layout.c  renderer.c  simulation.c  vec2.c  widget.c
src/editor/: body_creator.c
src/math/: vec2.c
src/physics/: gravity.c  simulation.c
src/render/: renderer.c
src/simulator/: simulator.c  simulator_camera.c  simulator_templates.c  simulator_ui.c
src/ui/: widget.c
